0.83
 * BREAKING CHANGE: Removed deprecated methods and constructors from the Realm class.

0.82.1
 * Fixed a bug where using the wrong encryption key first caused the right key to be seen as invalid.
 * Fixed a bug where String fields were ignored when updating objects from JSON with null values.
 * Fixed a bug when calling System.exit(0), the process might hang.

0.82
 * RealmConfiguration.setModules() now accept ignore null values which Realm.getDefaultModule() might return.
 * Trying to access a deleted Realm object throw throws a proper IllegalStateException.
 * Added in-memory Realm support.
 * Closing realm on another thread different from where it was created now throws an exception.
 * Realm will now throw a RealmError when Realm's underlying storage engine encounters an unrecoverable error.
 * @Index annotation can also be applied to byte/short/int/long/boolean/Date now.
 * BREAKING CHANGE: Fields with annotation @PrimaryKey are indexed automatically now. Older schemas require a migration.
 * Fixed a bug where RealmQuery objects are prematurely garbage collected.
 * Removed RealmQuery.between() for link queries.

0.81.1
 * Fixed memory leak causing Realm to never release Realm objects.

0.81
 * Introduced RealmModules for working with custom schemas in libraries and apps.
 * Introduced Realm.getDefaultInstance(), Realm.setDefaultInstance(RealmConfiguration) and Realm.getInstance(RealmConfiguration).
 * Deprecated most constructors. They have been been replaced by Realm.getInstance(RealmConfiguration) and Realm.getDefaultInstance().
 * Deprecated Realm.migrateRealmAtPath(). It has been replaced by Realm.migrateRealm(RealmConfiguration).
 * Deprecated Realm.deleteFile(). It has been replaced by Realm.deleteRealm(RealmConfiguration).
 * Deprecated Realm.compactFile(). It has been replaced by Realm.compactRealm(RealmConfiguration).
 * RealmList.add(), RealmList.addAt() and RealmList.set() now copy standalone objects transparently into Realm.