@@ -1,5 +1,6 @@
 0.83
  * BREAKING CHANGE: Removed deprecated methods and constructors from the Realm class.
+ * Fixed a bug which might cause failure when loading the native library.
 
 0.82.1
  * Fixed a bug where using the wrong encryption key first caused the right key to be seen as invalid.
